[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datacenter-openenv"
version = "0.1.0"
description = "Autonomous Data Center Thermal Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "pydantic",
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
